@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2014 the original author or authors.
+ * Copyright 2012-2016 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -41,11 +41,12 @@ import org.springframework.boot.loader.util.AsciiBytes;
  * {@link Archive} implementation backed by an exploded archive directory.
  *
  * @author Phillip Webb
+ * @author Andy Wilkinson
  */
 public class ExplodedArchive extends Archive {
 
-	private static final Set<String> SKIPPED_NAMES = new HashSet<String>(Arrays.asList(
-			".", ".."));
+	private static final Set<String> SKIPPED_NAMES = new HashSet<String>(
+			Arrays.asList(".", ".."));
 
 	private static final AsciiBytes MANIFEST_ENTRY_NAME = new AsciiBytes(
 			"META-INF/MANIFEST.MF");
@@ -116,7 +117,7 @@ public class ExplodedArchive extends Archive {
 	public URL getUrl() throws MalformedURLException {
 		FilteredURLStreamHandler handler = this.filtered ? new FilteredURLStreamHandler()
 				: null;
-		return new URL("file", "", -1, this.root.toURI().getPath(), handler);
+		return new URL("file", "", -1, this.root.toURI().toURL().getPath(), handler);
 	}
 
 	@Override
@@ -152,7 +153,8 @@ public class ExplodedArchive extends Archive {
 
 	protected Archive getNestedArchive(Entry entry) throws IOException {
 		File file = ((FileEntry) entry).getFile();
-		return (file.isDirectory() ? new ExplodedArchive(file) : new JarFileArchive(file));
+		return (file.isDirectory() ? new ExplodedArchive(file)
+				: new JarFileArchive(file));
 	}
 
 	@Override
@@ -174,7 +176,7 @@ public class ExplodedArchive extends Archive {
 
 		private final File file;
 
-		public FileEntry(AsciiBytes name, File file) {
+		FileEntry(AsciiBytes name, File file) {
 			this.name = name;
 			this.file = file;
 		}
@@ -199,13 +201,10 @@ public class ExplodedArchive extends Archive {
 	 */
 	private class FilteredURLStreamHandler extends URLStreamHandler {
 
-		public FilteredURLStreamHandler() {
-		}
-
 		@Override
 		protected URLConnection openConnection(URL url) throws IOException {
-			String name = url.getPath().substring(
-					ExplodedArchive.this.root.toURI().getPath().length());
+			String name = url.getPath()
+					.substring(ExplodedArchive.this.root.toURI().getPath().length());
 			if (ExplodedArchive.this.entries.containsKey(new AsciiBytes(name))) {
 				return new URL(url.toString()).openConnection();
 			}
@@ -220,7 +219,7 @@ public class ExplodedArchive extends Archive {
 
 		private final String name;
 
-		public FileNotFoundURLConnection(URL url, String name) {
+		FileNotFoundURLConnection(URL url, String name) {
 			super(url);
 			this.name = name;
 		}
